LRSD-5531 Breadcrumb container in article pages is centralized and not top aligned - fix

--- a/workspaces/liferay-learn-workspace/client-extensions/liferay-learn-global-css/assets/global.css
+++ b/workspaces/liferay-learn-workspace/client-extensions/liferay-learn-global-css/assets/global.css
@@ -300,12 +300,15 @@ pre[class*='language-'] {
 	padding: 1.5rem 0;
 }
 
+.learn-article {
+	padding-top: 0 !important;
+}
+
 .learn-article,
 .learn-recipe-container {
 	font-family: var(--font-family-sans-serif);
 	max-width: var(--container-max-xl);
 	padding: var(--spacer-4);
-	padding-top: 0;
 	position: relative;
 
 	.container-fluid-max-xl,
